--- a/src/app/attendance/attendance.component.scss
+++ b/src/app/attendance/attendance.component.scss
@@ -1,5 +1,4 @@
-.file-label {
-    position: relative;
-    left: 70px;
-    top: 16px;
+.file-upload {
+    display: flex;
+    align-items: center;
 }
