--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 
 <ion-content [fullscreen]="true">
     <div class="container ion-padding-horizontal">
-        <ion-img src="assets/images/ideia.svg" style="width: 150px; margin: 0 auto;"></ion-img>
+        <ion-img src="assets/images/martelo.svg" style="width: 150px; margin: 0 auto;"></ion-img>
         <h3>Bem vindo ao Daily Tools</h3>
         <p>Aqui você terá em mãos algumas ferramentas úteis para o seu dia a dia.</p>
     </div>
