--- a/src/app/attendance/attendance.component.html
+++ b/src/app/attendance/attendance.component.html
@@ -5,7 +5,7 @@
         </ion-buttons>
         <ion-title>Acompanhamento CPFL</ion-title>
         <ion-buttons slot="end">
-            <ion-button (click)="attendanceService.showTools($event)">
+            <ion-button (click)="showTools($event)">
                 <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
             </ion-button>
         </ion-buttons>
