--- a/src/app/todo/components/item-list/item-list.component.html
+++ b/src/app/todo/components/item-list/item-list.component.html
@@ -9,4 +9,20 @@
 <ion-content [fullscreen]="true">
     <ion-progress-bar type="indeterminate" *ngIf="isLoadingCategoryInfo || isLoadingItems"></ion-progress-bar>
     <h2 class="ion-padding-start">{{ categoryName }}</h2>
+    <ion-list *ngIf="items && items.length > 0">
+        <ion-item *ngFor="let item of items; let i = index">
+            <ion-label>
+                <span [ngStyle]="{'text-decoration': item.done ? null : 'line-through'}">
+                    {{ item.name }}
+                </span>
+            </ion-label>
+            <ion-checkbox slot="start"></ion-checkbox>
+        </ion-item>
+    </ion-list>
+    <div class="empty-data-container" *ngIf="!isLoadingItems && items && items.length === 0">
+        <div>
+            <ion-img src="assets/images/caixa.svg" style="width: 150px; margin: 0 auto;"></ion-img>
+            <p>Nenhum item encontrado!</p>
+        </div>
+    </div>
 </ion-content>
