finalizando todo app

--- a/src/app/todo/components/category-list/category-list.component.html
+++ b/src/app/todo/components/category-list/category-list.component.html
@@ -3,12 +3,12 @@
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
-        <ion-title>To Do</ion-title>
+        <ion-title>Tarefas</ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-    <ion-progress-bar type="indeterminate" *ngIf="isLoading"></ion-progress-bar>
+    <!-- <ion-progress-bar type="indeterminate" *ngIf="isLoading"></ion-progress-bar> -->
     <h2 class="ion-padding-start">Categorias</h2>
 
     <ion-grid>
