--- a/src/app/todo/components/item-list/add/add.component.html
+++ b/src/app/todo/components/item-list/add/add.component.html
@@ -5,7 +5,7 @@
                 <ion-icon name="close"></ion-icon>
             </ion-button>
         </ion-buttons>
-        <ion-title>Nova categoria</ion-title>
+        <ion-title>Novo item</ion-title>
     </ion-toolbar>
 </ion-header>
 
@@ -23,7 +23,7 @@
                 <ion-spinner></ion-spinner>
             </ng-container>
             <ng-container *ngIf="!isLoading">
-                Criar categoria
+                Criar item
             </ng-container>
         </ion-button>
     </div>
